Salesforce-Code-Git/src/objects/Tower__c.object
<CustomObject>
    <fields>
        <fullName>Area__c</fullName>
        <label>Area</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Developer_Project__c</fullName>
        <description>Project under which the tower was allocated</description>
        <label>Developer Project</label>
        <referenceTo>Developer_Project__c</referenceTo>
        <relationshipLabel>Towers</relationshipLabel>
        <relationshipName>Towers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Progress__c</fullName>
        <label>Progress</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Started</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Work_Done__c</fullName>
        <label>Work Done</label>
        <picklist>
            <controllingField>Status__c</controllingField>
            <picklistValues>
                <fullName>0%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5-95%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100%</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Tower</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Developer_Project__c</columns>
        <columns>Location__c</columns>
        <columns>Status__c</columns>
        <columns>Work_Done__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Tower Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Towers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>